fix: hide navbar divider on mobile

--- a/src/theme/Navbar/Content/styles.module.css
+++ b/src/theme/Navbar/Content/styles.module.css
@@ -17,8 +17,15 @@ Hide color mode toggle in small viewports
 .marginRightAuto {
   margin-right: auto;
 }
+
 .divider {
   border-left: 2px solid #eaeaea;
   height: 1.75rem;
   margin: 0 1rem;
+}
+
+@media (max-width: 996px) {
+  .divider {
+    height: 0rem;
+  }
 }
